updating with heat/mavs hackathon and 5080 gpu

--- a/notebooks/5080_gpu/environment_uv_docker_jax_pytorch_mlflow_portfriendly_5080_allenabled_efficient_jaxgpu_efficient.ipynb
+++ b/notebooks/5080_gpu/environment_uv_docker_jax_pytorch_mlflow_portfriendly_5080_allenabled_efficient_jaxgpu_efficient.ipynb
@@ -43,84 +43,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting ../../.gitattributes\n"
-     ]
-    }
-   ],
    "source": [
-    "%%writefile ../../.gitattributes\n",
-    "# Enforce LF for shell scripts & Docker/compose to avoid bash/sh\\r errors\n",
-    "*.sh     text eol=lf\n",
-    "*.bash   text eol=lf\n",
-    "Dockerfile text eol=lf\n",
-    "*.dockerfile text eol=lf\n",
-    "docker-compose*.yml text eol=lf\n",
-    "*.env    text eol=lf\n",
-    "\n"
+    "# Quick Env changes:\n",
+    "- ctrl + f the env_name and adjust to whatever you want\n",
+    "- ensure ports aren't used by others, adjust if so"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting ../../.devcontainer/.dockerignore\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile ../../.dockerignore\n",
-    "# VCS/editor\n",
-    ".git\n",
-    ".gitignore\n",
-    ".vscode\n",
-    ".idea\n",
-    ".DS_Store\n",
-    "Thumbs.db\n",
-    "\n",
-    "# Python\n",
-    "**/__pycache__/\n",
-    "**/*.py[cod]\n",
-    "**/*.pyo\n",
-    "*.log\n",
-    "\n",
-    "# Virtual envs\n",
-    ".venv\n",
-    "venv\n",
-    "env\n",
-    "\n",
-    "# Data / artifacts\n",
-    "data/\n",
-    "mlruns/\n",
-    "mlflow_db/\n",
-    "**/.ipynb_checkpoints/\n",
-    "\n",
-    "# Big notebooks outputs\n",
-    "notebooks/**/*.ipynb_checkpoints\n",
-    "\n",
-    "# OS / misc\n",
-    "*.code-workspace\n",
-    "\n",
-    "# We still need the .devcontainer directory for the Dockerfile, scripts, etc.\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +114,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ../../.gitattributes\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ../../.gitattributes\n",
+    "# Enforce LF for shell scripts & Docker/compose to avoid bash/sh\\r errors\n",
+    "*.sh     text eol=lf\n",
+    "*.bash   text eol=lf\n",
+    "Dockerfile text eol=lf\n",
+    "*.dockerfile text eol=lf\n",
+    "docker-compose*.yml text eol=lf\n",
+    "*.env    text eol=lf\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ../../.dockerignore\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ../../.dockerignore\n",
+    "# VCS/editor\n",
+    ".git\n",
+    ".gitignore\n",
+    ".vscode\n",
+    ".idea\n",
+    ".DS_Store\n",
+    "Thumbs.db\n",
+    "\n",
+    "# Python\n",
+    "**/__pycache__/\n",
+    "**/*.py[cod]\n",
+    "**/*.pyo\n",
+    "*.log\n",
+    "\n",
+    "# Virtual envs\n",
+    ".venv\n",
+    "venv\n",
+    "env\n",
+    "\n",
+    "# Data / artifacts\n",
+    "data/\n",
+    "mlruns/\n",
+    "mlflow_db/\n",
+    "**/.ipynb_checkpoints/\n",
+    "\n",
+    "# Big notebooks outputs\n",
+    "notebooks/**/*.ipynb_checkpoints\n",
+    "\n",
+    "# OS / misc\n",
+    "*.code-workspace\n",
+    "\n",
+    "# We still need the .devcontainer directory for the Dockerfile, scripts, etc.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1531,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1737,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1892,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2167,7 +2176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2191,7 +2200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2337,19 +2346,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../../.devcontainer/pyproject.toml\n"
+      "Overwriting ../../pyproject.toml\n"
      ]
     }
    ],
    "source": [
-    "%%writefile ../../.devcontainer/pyproject.toml\n",
+    "%%writefile ../../pyproject.toml\n",
     "[project]\n",
     "name = \"docker_dev_template\"\n",
     "version = \"0.1.0\"\n",
@@ -2359,44 +2368,103 @@
     "readme = \"README.md\"\n",
     "requires-python = \">=3.10,<3.13\"\n",
     "\n",
+    "# Unified deps = requirements.txt parity + safe bumps for JAX/PyMC\n",
     "dependencies = [\n",
-    "  \"pandas>=1.2.0\",\n",
-    "  \"numpy>=1.20.0\",\n",
-    "  \"matplotlib>=3.4.0\",\n",
-    "  \"mlflow>=2.10.2\",\n",
-    "  \"mlflow-skinny>=2.10.2\",\n",
-    "  \"scikit-learn>=1.4.2\",\n",
-    "  \"pymc>=5.0.0\",\n",
-    "  \"arviz>=0.14.0\",\n",
-    "  \"statsmodels>=0.13.0\",\n",
-    "  \"jupyterlab>=3.0.0\",\n",
-    "  \"seaborn>=0.11.0\",\n",
-    "  \"tabulate>=0.9.0\",\n",
-    "  \"shap>=0.40.0\",\n",
+    "  # ── Core numerics / data ─────────────────\n",
+    "  \"numpy>=1.26.0\",               # JAX 0.6.x expects >=1.26\n",
+    "  \"pandas>=2.1.0\",\n",
+    "  \"scipy>=1.12.0\",\n",
+    "  \"pyarrow>=12.0.0\",\n",
+    "  \"duckdb~=1.3.2\",\n",
+    "\n",
+    "  # ── ML / stats ───────────────────────────\n",
+    "  \"scikit-learn>=1.4.2\",         # ≥1.3.0 in reqs; newer OK\n",
     "  \"xgboost>=1.5.0\",\n",
     "  \"lightgbm>=3.3.0\",\n",
     "  \"catboost>=1.2.8,<1.3.0\",\n",
-    "  \"scipy>=1.7.0\",\n",
+    "  \"optuna>=3.0.0\",\n",
+    "  \"optuna-integration[mlflow]>=0.2.0\",\n",
+    "\n",
+    "  # PyMC stack (lift to handle NumPy 2.x cleanly)\n",
+    "  \"pymc>=5.21.0\",                # modern PyMC supports NumPy 2.x\n",
+    "  \"pytensor>=2.28.2\",\n",
+    "  \"arviz>=0.14.0\",\n",
+    "  \"statsmodels>=0.13.0\",\n",
+    "  \"numpyro>=0.18.0,<1.0.0\",\n",
+    "  \"nutpie>=0.7.1\",\n",
+    "  \"pytensor>=2.28.2\",\n",
+    "  \"aesara>=2.9.4\",\n",
+    "\n",
+    "  # ── Explainability ───────────────────────\n",
+    "  \"shap>=0.40.0\",\n",
     "  \"shapash[report]>=2.3.0\",\n",
     "  \"shapiq>=0.1.0\",\n",
     "  \"explainerdashboard==0.5.1\",\n",
-    "  \"ipywidgets>=8.0.0\",\n",
-    "  \"nutpie>=0.7.1\",\n",
-    "  \"numpyro>=0.18.0,<1.0.0\",\n",
-    "  \"pytensor>=2.18.3\",\n",
-    "  \"aesara>=2.9.4\",\n",
-    "  \"tqdm>=4.66.5\",\n",
-    "  \"pyarrow>=12.0.0\",\n",
-    "  \"optuna>=3.0.0\",\n",
-    "  \"optuna-integration[mlflow]>=0.2.0\",\n",
-    "  \"omegaconf>=2.3.0,<2.4.0\",\n",
-    "  \"hydra-core>=1.3.2,<1.4.0\",\n",
+    "\n",
+    "  # ── API / web ────────────────────────────\n",
     "  \"fastapi>=0.104.0\",\n",
     "  \"uvicorn[standard]>=0.24.0\",\n",
-    "  \"pydantic>=2.0.0\",\n",
-    "  \"pydantic-settings\",\n",
-    "  \"kagglehub[pandas-datasets]>=0.3.12,<0.4.0\",\n",
-    "  \"duckdb~=1.3.2\",\n",
+    "  \"httpx>=0.24.0\",\n",
+    "  \"python-multipart>=0.0.6\",\n",
+    "  \"python-dotenv>=1.0.0\",\n",
+    "\n",
+    "  # ── Auth / security ──────────────────────\n",
+    "  \"python-jose[cryptography]>=3.3.0\",\n",
+    "  \"passlib[bcrypt]>=1.7.4\",\n",
+    "  \"bcrypt==4.0.1\",\n",
+    "\n",
+    "  # ── Caching / resiliency / rate limiting ─\n",
+    "  \"fastapi-limiter>=0.1.5\",\n",
+    "  \"aioredis>=2.0.0\",             # shim to redis asyncio (deprecated but fine)\n",
+    "  \"requests\",\n",
+    "  \"requests-cache\",\n",
+    "  \"diskcache\",\n",
+    "  \"ratelimit>=2.2.1\",\n",
+    "  \"tenacity>=8.2.3\",\n",
+    "  \"cloudscraper==1.2.71\",\n",
+    "\n",
+    "  # ── Visualization / notebooks ────────────\n",
+    "  \"matplotlib>=3.4.0\",\n",
+    "  \"seaborn>=0.11.0\",\n",
+    "  \"tabulate>=0.9.0\",\n",
+    "  \"jupyterlab>=3.0.0\",\n",
+    "  \"ipykernel>=6.25.0\",\n",
+    "  \"ipywidgets>=8.0.0\",\n",
+    "\n",
+    "  # ── Utilities / IO ───────────────────────\n",
+    "  \"tqdm>=4.67.0\",\n",
+    "  \"psutil>=5.0.0,<8.0.0\",\n",
+    "  \"protobuf>=4.24.4\",\n",
+    "  \"unidecode\",\n",
+    "  \"cpi>=2.0.0\",\n",
+    "  \"lxml>=4.9.0\",\n",
+    "  \"html5lib>=1.1\",\n",
+    "  \"beautifulsoup4>=4.12.0\",\n",
+    "  \"opencv-python-headless\",\n",
+    "  \"pillow\",\n",
+    "  \"boto3\",\n",
+    "  \"aiosqlite>=0.19.0\",\n",
+    "  \"openpyxl>=3.1.5\",\n",
+    "  \"lz4==4.4.4\",\n",
+    "\n",
+    "  # ── Sports / domain ──────────────────────\n",
+    "  \"nba_api==1.4.1\",\n",
+    "  \"rapidfuzz>=3.0.0\",\n",
+    "\n",
+    "  # ── Dashboards ───────────────────────────\n",
+    "  \"dash\",\n",
+    "  \"dash-bootstrap-components\",\n",
+    "  \"plotly\",\n",
+    "\n",
+    "  # ── Config / KaggleHub ───────────────────\n",
+    "  \"omegaconf>=2.3.0,<2.4.0\",\n",
+    "  \"hydra-core>=1.3.2,<1.4.0\",\n",
+    "  \"kagglehub[datasets,pandas]>=0.3.12,<0.4.0\",\n",
+    "\n",
+    "  # ── MLflow ───────────────────────────────\n",
+    "  \"mlflow>=2.10.2\",\n",
+    "  \"mlflow-skinny>=2.10.2\",\n",
+    "  \"apache-airflow==3.0.6\",\n",
     "]\n",
     "\n",
     "[project.optional-dependencies]\n",
@@ -2409,16 +2477,18 @@
     "  \"invoke>=2.2\",\n",
     "]\n",
     "\n",
-    "# GPU frameworks for Linux only (TensorFlow completely removed)\n",
+    "# GPU frameworks for Linux only (TensorFlow removed)\n",
+    "# NOTE: JAX GPU extra naming changed; use [cuda12] and keep versions aligned.\n",
     "linux-gpu = [\n",
     "  \"torch      ; platform_system == 'Linux'\",\n",
     "  \"torchvision; platform_system == 'Linux'\",\n",
     "  \"torchaudio ; platform_system == 'Linux'\",\n",
-    "  \"jax[cuda12-local]>=0.4.26 ; platform_system == 'Linux'\",\n",
+    "  \"jax[cuda12]==0.6.0 ; platform_system == 'Linux'\",\n",
+    "  \"jaxlib==0.6.0      ; platform_system == 'Linux'\",\n",
     "]\n",
     "\n",
     "memory-management = [\n",
-    "  \"psutil>=5.9.0\",\n",
+    "  \"psutil>=5.0.0,<8.0.0\",\n",
     "  \"memory-profiler>=0.61.0\",\n",
     "]\n",
     "\n",
@@ -2431,13 +2501,12 @@
     "[tool.uv]\n",
     "compile-bytecode = true\n",
     "link-mode = \"copy\"\n",
-    "python-downloads = \"never\"\n",
-    "\n"
+    "python-downloads = \"never\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2910,7 +2979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3182,7 +3251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3359,7 +3428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3590,7 +3659,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -3604,7 +3673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
