updating with 4090 gpu setup complete

--- a/notebooks/5080_gpu/basic_models.ipynb
+++ b/notebooks/5080_gpu/basic_models.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fb877603",
    "metadata": {},
    "outputs": [
@@ -30,20 +30,39 @@
      "text": [
       "\n",
       "=== ENV SNAPSHOT (selected) ===\n",
-      "JAX_PLATFORM_NAME=''\n",
+      "JAX_PLATFORM_NAME=None\n",
       "JAX_PLATFORMS=None\n",
       "CUDA_VISIBLE_DEVICES='0'\n",
-      "XLA_FLAGS='--xla_force_host_platform_device_count=1'\n",
+      "XLA_FLAGS='--xla_gpu_cuda_data_dir=/usr/local/cuda'\n",
       "NVIDIA_VISIBLE_DEVICES='all'\n",
       "NVIDIA_DRIVER_CAPABILITIES='compute,utility'\n",
       "===============================\n",
       "\n",
       "=== NVIDIA-SMI ===\n",
-      "Thu Aug 28 20:31:54 2025       \n",
+      "Thu Sep 11 23:06:14 2025       \n",
       "GPU is visible to the container/process.\n",
       "==================\n",
       "\n",
-      "=== PyTorch ===\n"
+      "=== PyTorch ===\n",
+      "torch.__version__=2.6.0+cu124\n",
+      "torch.version.cuda=12.4\n",
+      "torch.cuda.is_available()=True\n",
+      "torch.cuda.device_count()=1\n",
+      "current device name: NVIDIA GeForce RTX 4090\n",
+      "small matmul check (CUDA): OK\n",
+      "==============\n",
+      "\n",
+      "=== JAX ===\n",
+      "jax.__version__=0.6.2\n",
+      "jaxlib.__version__=0.6.2\n",
+      "Device: kind=NVIDIA GeForce RTX 4090, platform=gpu, id=0\n",
+      "small matmul check (JAX default backend): OK\n",
+      "===========\n",
+      "\n",
+      "=== TensorFlow ===\n",
+      "TensorFlow import failed: ModuleNotFoundError(\"No module named 'tensorflow'\")\n",
+      "==================\n",
+      "\n"
      ]
     }
    ],
@@ -198,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "117b6613",
    "metadata": {},
    "outputs": [
@@ -424,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f4fad220",
    "metadata": {},
    "outputs": [
@@ -605,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f6a2f885",
    "metadata": {},
    "outputs": [
@@ -623,7 +642,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64891ccb40dd4139a7f77cbe06356f03",
+       "model_id": "85be7398151044ec8af8b9e67a881b91",
        "version_major": 2,
        "version_minor": 0
       },
@@ -633,6 +652,32 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3.10/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
+      "  self.pid = os.fork()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sampling 2 chains for 1_000 tune and 1_000 draw iterations (2_000 + 2_000 draws total) took 2 seconds.\n",
+      "We recommend running at least 4 chains for robust computation of convergence diagnostics\n"
+     ]
     }
    ],
    "source": [
@@ -696,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "77db1fba",
    "metadata": {},
    "outputs": [
@@ -705,17 +750,17 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "NVIDIA GeForce RTX 5080 Laptop GPU\n",
+      "NVIDIA GeForce RTX 4090\n",
       "LinearRegression(\n",
       "  (linear): Linear(in_features=1, out_features=1, bias=True)\n",
       ")\n",
-      "<generator object Module.parameters at 0x75f06390e110>\n",
-      "OrderedDict([('linear.weight', tensor([[-0.9560]])), ('linear.bias', tensor([0.1967]))])\n",
-      "tensor([-0.7592], grad_fn=<ViewBackward0>)\n",
-      "tensor([-1.7152], grad_fn=<ViewBackward0>)\n",
-      "tensor([-2.6711], grad_fn=<ViewBackward0>)\n",
-      "tensor([-3.6271], grad_fn=<ViewBackward0>)\n",
-      "tensor([-4.5830], grad_fn=<ViewBackward0>)\n"
+      "<generator object Module.parameters at 0x7172158560a0>\n",
+      "OrderedDict([('linear.weight', tensor([[0.8189]])), ('linear.bias', tensor([-0.2805]))])\n",
+      "tensor([0.5384], grad_fn=<ViewBackward0>)\n",
+      "tensor([1.3572], grad_fn=<ViewBackward0>)\n",
+      "tensor([2.1761], grad_fn=<ViewBackward0>)\n",
+      "tensor([2.9949], grad_fn=<ViewBackward0>)\n",
+      "tensor([3.8138], grad_fn=<ViewBackward0>)\n"
      ]
     }
    ],
@@ -776,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "71669026",
    "metadata": {},
    "outputs": [
@@ -784,17 +829,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: loss=0.6447\n",
-      "Epoch 50: loss=0.2672\n",
-      "Epoch 100: loss=0.2644\n",
-      "Epoch 150: loss=0.2697\n",
-      "Epoch 200: loss=0.2683\n",
-      "Epoch 250: loss=0.2665\n",
-      "Epoch 300: loss=0.2749\n",
-      "Epoch 350: loss=0.2641\n",
-      "Epoch 400: loss=0.2662\n",
-      "Epoch 450: loss=0.2684\n",
-      "Final w,b: [1.77348886] 0.7236525850267588\n"
+      "Epoch 0: loss=0.6427\n",
+      "Epoch 50: loss=0.2706\n",
+      "Epoch 100: loss=0.2666\n",
+      "Epoch 150: loss=0.2666\n",
+      "Epoch 200: loss=0.2666\n",
+      "Epoch 250: loss=0.2675\n",
+      "Epoch 300: loss=0.2656\n",
+      "Epoch 350: loss=0.2698\n",
+      "Epoch 400: loss=0.2710\n",
+      "Epoch 450: loss=0.2681\n",
+      "Final w,b: [1.77777766] 0.7048330797041529\n"
      ]
     }
    ],
@@ -896,10 +941,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1995243c",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Initializing NUTS using jitter+adapt_diag...\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -918,7 +970,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Initializing NUTS using jitter+adapt_diag...\n",
       "/app/.venv/lib/python3.10/site-packages/pytensor/link/c/cmodule.py:2968: UserWarning: PyTensor could not link to a BLAS installation. Operations that might benefit from BLAS will be severely degraded.\n",
       "This usually happens when PyTensor is installed via pip. We recommend it be installed via conda/mamba/pixi instead.\n",
       "Alternatively, you can use an experimental backend such as Numba or JAX that perform their own BLAS optimizations, by setting `pytensor.config.mode == 'NUMBA'` or passing `mode='NUMBA'` when compiling a PyTensor function.\n",
@@ -934,7 +985,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "082ee05d9c444bc983458db70ece4923",
+       "model_id": "3a1c2f77cee84937b9c16ae3f9614a21",
        "version_major": 2,
        "version_minor": 0
       },
@@ -976,12 +1027,12 @@
      "output_type": "stream",
      "text": [
       "       mean     sd  hdi_2.5%  hdi_97.5%  mcse_mean  mcse_sd  ess_bulk  \\\n",
-      "w[0]  1.129  0.766    -0.343      2.697      0.013    0.012    3265.0   \n",
-      "b     0.275  0.730    -1.190      1.647      0.013    0.011    3242.0   \n",
+      "w[0]  1.134  0.759    -0.295      2.662      0.014    0.013    3219.0   \n",
+      "b     0.284  0.734    -1.132      1.720      0.012    0.012    3932.0   \n",
       "\n",
       "      ess_tail  r_hat  \n",
-      "w[0]    2687.0    1.0  \n",
-      "b       2723.0    1.0  \n"
+      "w[0]    2214.0    1.0  \n",
+      "b       2560.0    1.0  \n"
      ]
     },
     {
@@ -994,7 +1045,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d1db77fa2824964858984a794bf4940",
+       "model_id": "ab609436d87d4d79bdb6bddbb6ed6c49",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1024,7 +1075,7 @@
       "=== POSTERIOR‑PREDICTIVE WIN PROBS ===\n",
       "Rating 50 → P(win) ≈ 0.27\n",
       "Rating 55 → P(win) ≈ 0.39\n",
-      "Rating 60 → P(win) ≈ 0.57\n",
+      "Rating 60 → P(win) ≈ 0.56\n",
       "Rating 65 → P(win) ≈ 0.71\n",
       "Rating 70 → P(win) ≈ 0.81\n"
      ]
@@ -1211,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "32421ab4",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cc0af6cf",
    "metadata": {},
    "outputs": [
@@ -1425,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "df460b81",
    "metadata": {},
    "outputs": [
@@ -1504,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6807e10a",
    "metadata": {},
    "outputs": [
@@ -1603,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "dca87d40",
    "metadata": {},
    "outputs": [
@@ -1731,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "69b07a1f",
    "metadata": {},
    "outputs": [
@@ -1835,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "7a359bbd",
    "metadata": {},
    "outputs": [
@@ -1934,9 +1985,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python (UV Environment)",
    "language": "python",
-   "name": "python3"
+   "name": "uv_docker_dev_template"
   },
   "language_info": {
    "codemirror_mode": {
