updating with updated pyproject.toml

--- a/notebooks/4090_gpu/docker_uv_env_setup_4090_jaxtorchgpu_organized.ipynb
+++ b/notebooks/4090_gpu/docker_uv_env_setup_4090_jaxtorchgpu_organized.ipynb
@@ -633,7 +633,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -712,9 +712,13 @@
         "  \n",
         "  # PyTorch core libraries - platform specific with PEP-508 compliant syntax\n",
         "  # CUDA wheels for Windows/Linux, CPU for macOS\n",
-        "\"torch>=2.0.0\",\n",
-        "\"torchvision>=0.15.0\",\n",
-        "\"torchaudio>=2.0.0\",\n",
+        "  \"torch>=2.0.0\",\n",
+        "  \"torchvision>=0.15.0\",\n",
+        "  \"torchaudio>=2.0.0\",\n",
+        "  \n",
+        "  # new for basemodels\n",
+        "  \"pydantic>=2.0.0\",\n",
+        "  \"pydantic-settings>=2.0.0\",\n",
         "]\n",
         "\n",
         "[project.optional-dependencies]\n",
