--- a/notebooks/heat_data_scientist_2025/5_hours_or_less_final_now_livecodingassessment.ipynb
+++ b/notebooks/heat_data_scientist_2025/5_hours_or_less_final_now_livecodingassessment.ipynb
@@ -2,148 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3970a804",
-   "metadata": {},
-   "source": [
-    "# Project Answers First\n",
-    "\n",
-    "Project 1 — NCAA → NBA 3PT Projection\n",
-    "\n",
-    "Project 2 — Explain the Model Simply\n",
-    "\n",
-    "Project 3 — Rank NBA player seasons (2010–11+)\n",
-    "\n",
-    "Project 4 — Methodology & rationale for rankings\n",
-    "\n",
-    "\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Then Code (Repo Structure)\n",
-    "\n",
-    "```text\n",
-    "heat_data_scientist_2025/\n",
-    "├─ src/                                  # \"src\" layout for imports\n",
-    "│  └─ heat_data_scientist_2025/\n",
-    "│     ├─ utils/\n",
-    "│     │  └─ config.py                    # paths, settings, helpers (CFG, ML_CONFIG, Paths)\n",
-    "│     ├─ data/\n",
-    "│     │  ├─ kaggle_pull.py               # load Kaggle tables, compute PIE/PER/GS36(+ VORP/EWA), build rankings & exports\n",
-    "│     │  ├─ load_data_utils.py           # parquet loader + diagnostics\n",
-    "│     │  ├─ feature_engineering.py       # feature creation (lags, metrics, composites, portability)\n",
-    "│     │  └─ column_schema.yaml           # (referenced; add here if you use schema validation)\n",
-    "│     └─ ml/\n",
-    "│        └─ ml_pipeline.py               # (WIP) multi-target ML pipeline, importance, filtering\n",
-    "│\n",
-    "├─ data/                                 # base data dir (can be overridden via HEAT_DATA_ROOT)\n",
-    "│  ├─ raw/\n",
-    "│  │  └─ heat_data_scientist_2025/       # optional local CSVs if not using KaggleHub directly\n",
-    "│  │     ├─ Players.csv (*Optional and Needs more data, for example giannis doesn't have draft round but was drafted 15th overall)\n",
-    "│  │     ├─ PlayerStatistics.csv\n",
-    "│  │     ├─ TeamStatistics.csv\n",
-    "│  │     ├─ Games.csv                    # (optional)\n",
-    "│  │     ├─ Teams.csv                    # (optional)\n",
-    "│  │     ├─ CoachHistory.csv | Coaches.csv   # (optional, either name)\n",
-    "│  │     └─ LeagueSchedule24_25.csv      # (optional)\n",
-    "│  ├─ processed/\n",
-    "│  │  └─ heat_data_scientist_2025/\n",
-    "│  │     ├─ nba_ml_dataset.parquet       # saved player-season dataset\n",
-    "│  │     ├─ nba_data_catalog.md          # (placeholder; referenced in config)\n",
-    "│  │     ├─ nba.sqlite                   # (placeholder; if you persist to SQLite)\n",
-    "│  │     ├─ nba_rankings_results.txt     # (optional aggregated text output)\n",
-    "│  │     ├─ eda/                         # EDA figures/tables (if you write them)\n",
-    "│  │     ├─ models/                      # trained models: {model}_{year}_model.pkl\n",
-    "│  │     ├─ predictions/                 # predictions + leaderboards (see patterns below)\n",
-    "│  │     └─ evaluation/                  # metrics + feature importance\n",
-    "│  ├─ quality/\n",
-    "│  │  └─ quality_reports/                # data quality outputs (if produced)\n",
-    "│  └─ parquet_cache/                     # local cache for parquet intermediates\n",
-    "│\n",
-    "├─ .env                                  # optional (HEAT_DATA_ROOT override, etc.)\n",
-    "└─ (notebooks/)                          # the notebook that wrote these files (where you ran %%writefile)\n",
-    "\n",
-    "\n",
-    "\n",
-    "Python File Glossary (what each does)\n",
-    "\n",
-    "src/heat_data_scientist_2025/utils/config.py\n",
-    "Central config. Provides typed paths (CFG: Paths), ML settings (ML_CONFIG: MLPipelineConfig), constants, and helpers to construct save/load locations (e.g., predictions_path, leaderboard_path) and ensure output dirs exist.\n",
-    "\n",
-    "src/heat_data_scientist_2025/data/kaggle_pull.py\n",
-    "Data IO + metric builders. Loads Kaggle tables, applies filters, computes PIE, Game Score/36, PER (uPER→aPER→PER), and simplified BPM → VORP/EWA. Aggregates to season level, ranks seasons (top/middle/bottom), and exports rankings to CSV/TXT.\n",
-    "\n",
-    "src/heat_data_scientist_2025/data/load_data_utils.py\n",
-    "Lightweight loaders and diagnostics for parquet/CSV (e.g., caching, type coercion, quick shape/NA checks) used by notebooks or pipelines.\n",
-    "\n",
-    "src/heat_data_scientist_2025/data/feature_engineering.py\n",
-    "Feature creation & hygiene: per-36 rates, usage/efficiency composites, lag features (e.g., *_lag1), portability/indices, plus any schema-aligned transforms you choose to keep consistent with column_schema.yaml.\n",
-    "\n",
-    "src/heat_data_scientist_2025/ml/ml_pipeline.py\n",
-    "(WIP) Training and evaluation for multiple targets (PIE, GS/36, PER, VORP/EWA). Handles feature filtering/importance, CV scoring, and writes models, predictions, leaderboards, and feature-importance artifacts under data/processed/....\n",
-    "\n",
-    "src/heat_data_scientist_2025/data/column_schema.yaml\n",
-    "Optional schema file you can use to validate column presence/dtypes/order across modules (useful when adding new engineered features or lags).\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "de854878",
-   "metadata": {},
-   "source": [
-    " # **Project 1:**  \n",
-    " \n",
-    " **Question:**  \n",
-    " You are tasked by the scouting department with creating a machine learning model that predicts which NCAA players will become good 3PT shooters in the NBA. How would you approach this problem? Be sure to explain what datasets you would want to use in your answer.\n",
-    "\n",
-    " **Answer:**\n",
-    "\n",
-    " ### Problem Definition\n",
-    " The goal is to identify which NCAA players are most likely to become reliable NBA shooters—defined here as hitting **≥36% from three on meaningful volume (250+ attempts) in their first three NBA seasons**. This gives scouts a forward-looking tool to prioritize prospects.\n",
-    "\n",
-    " ### Data Sources\n",
-    " - **Primary:** NCAA box scores and season splits from Sports-Reference; NBA outcomes from the NBA Stats API and Basketball-Reference.\n",
-    " - **Premium (if available):** Synergy Sports for shot-type context (catch-and-shoot vs. off-dribble, contested vs. uncontested).\n",
-    " - **Linking:** Draft records to connect each NCAA player’s college profile to their NBA career.\n",
-    "\n",
-    " ### Key Features\n",
-    " - **3PA rate:** Shows willingness to take threes.\n",
-    " - **FT%:** A reliable indicator of shooting touch.\n",
-    " - **Age on Draft Night:** Aligns with NBA development curves; younger players with the same stats usually have more upside.\n",
-    " - **EB-smoothed NCAA 3P%:** Adjusts raw makes/attempts by blending them with league averages, so small samples aren’t over- or under-weighted.\n",
-    " - **Shot selection & role metrics:** Synergy adds insight into whether a player’s threes come in translatable contexts (spot-ups vs. forced off-dribble).\n",
-    "\n",
-    " ### Controls & Adjustments\n",
-    " - Add a regime flag for NCAA 3P% (pre- vs. post-2019 line move) to account for different difficulty environments.\n",
-    " - Normalize by pace and possessions so players on faster teams aren’t inflated.\n",
-    " - Recognize positional context: guards are expected to take higher-volume threes, while bigs may show value even at lower volume.\n",
-    "\n",
-    " ### Modeling Approach\n",
-    " - **Y variable:** An Empirical Bayes estimate of NBA 3P% in Years 1–3 (shrunk toward league average for stability).\n",
-    " - **Features:** NCAA data flows into a model (regularized regression or gradient boosted trees). The model outputs:\n",
-    "     1. A probability the player will be at or above NBA league-average from three on real volume.\n",
-    "     2. A stabilized NBA 3P% projection with uncertainty bands.\n",
-    "\n",
-    " ### Why This Works\n",
-    " Empirical Bayes on both sides (college and NBA) prevents us from overrating noisy samples. The regime flag ensures fair comparisons across eras. The features (3PA rate, FT%, role, and age) are exactly the indicators that scouts already care about—the model simply quantifies them against 10+ years of draft history. This way, we aren’t replacing the eye test, just giving scouts an evidence-based lens to spot hidden value or validate what they already see on film.\n",
-    "\n",
-    " ---\n",
-    "\n",
-    " # **Project 2:** \n",
-    "\n",
-    " **Question:**  \n",
-    " You’ve built the machine learning model from question 1, and now a scout wants help understanding it. Explain how machine learning models would work in this specific context in one or two paragraphs, using simple language.\n",
-    "\n",
-    " **Answer:**\n",
-    "\n",
-    " Think of this like having a very experienced scout who has tracked every draft class since 2010. The model looks at hundreds of players who went from college to the NBA and learns the patterns: younger players with solid free throw touch and high three-point volume usually develop into strong NBA shooters, while older players with similar stats tend to plateau.\n",
-    "\n",
-    " For any new prospect, we feed in their college profile—3PA rate, FT%, age, role, and their EB-adjusted NCAA 3P% (which smooths out hot streaks or cold stretches). The model compares them to historical players and gives two outputs: (1) the probability that they’ll become an above-average NBA shooter in their first three years, and (2) a stabilized projection of their NBA 3P%. We also highlight the “why” in plain terms—for example: “19 years old, high volume, strong FT%—looks similar to Player X at the same stage.”\n",
-    "\n",
-    " This doesn’t replace your eye test. Instead, it adds another layer: it can uncover overlooked shooters or flag concerns about hyped players whose stats don’t usually translate. And because the outcome variable is an EB-smoothed NBA 3P% over Y1–Y3, it reflects true shooting skill instead of just early streaks or slumps.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "0ff6c9c8",
    "metadata": {},
    "source": [
@@ -550,19 +408,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "94826ea3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "\n",
-    "os.chdir(\"../../\")"
+    "if os.getcwd() != \"docker_dev_template\":\n",
+    "    os.chdir(\"../../\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0da26de4",
    "metadata": {},
    "outputs": [
@@ -961,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c8df1f2e",
    "metadata": {},
    "outputs": [
@@ -974,6 +832,9 @@
       "1. Building player-game data...\n",
       "Loaded PlayerStatistics.csv -> 'PlayerStatistics' (1,627,438 rows)\n",
       "Loaded TeamStatistics.csv -> 'TeamStatistics' (143,758 rows)\n",
+      "Saved base CSVs:\n",
+      "- C:\\docker_projects\\docker_dev_template\\data\\processed\\heat_data_scientist_2025\\base\\player_statistics_used_Regular Season_from_2009.csv\n",
+      "- C:\\docker_projects\\docker_dev_template\\data\\processed\\heat_data_scientist_2025\\base\\team_statistics_used_Regular Season_from_2009.csv\n",
       "Dropped 87,193 zero-minute games\n",
       "Success: (397558, 41) player-game records\n",
       "\n",
@@ -2461,21 +2322,56 @@
     "        \n",
     "    return result\n",
     "\n",
+    "# --- add below your imports ---\n",
+    "def export_base_csvs(\n",
+    "    player_stats: pd.DataFrame,\n",
+    "    team_stats: pd.DataFrame,\n",
+    "    outdir: Path | str | None = None,\n",
+    "    start_season: int = CFG_START_SEASON,\n",
+    "    season_type: str = CFG_SEASON_TYPE,\n",
+    ") -> None:\n",
+    "    \"\"\"\n",
+    "    Save the filtered Kaggle bases actually used downstream.\n",
+    "    \"\"\"\n",
+    "    base_dir = Path(outdir) if outdir else (Path(CFG.processed_dir) / \"base\")\n",
+    "    base_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    ps_path = base_dir / f\"player_statistics_used_{season_type}_from_{start_season}.csv\"\n",
+    "    ts_path = base_dir / f\"team_statistics_used_{season_type}_from_{start_season}.csv\"\n",
+    "\n",
+    "    player_stats.to_csv(ps_path, index=False)\n",
+    "    team_stats.to_csv(ts_path, index=False)\n",
+    "    print(f\"Saved base CSVs:\\n- {ps_path}\\n- {ts_path}\")\n",
+    "\n",
+    "\n",
     "def build_player_game_data(\n",
     "    start_season: int = CFG_START_SEASON,\n",
     "    season_type: str = CFG_SEASON_TYPE, \n",
     "    minutes_minimum: int = CFG_MIN_SEASON_MINUTES,\n",
+    "    export_bases: bool = False,                 # <-- NEW\n",
+    "    bases_outdir: Path | str | None = None,     # <-- NEW\n",
     ") -> pd.DataFrame:\n",
     "    \"\"\"Build player-game data with PIE calculations\"\"\"\n",
-    "    \n",
     "    data = load_nba_data([\"PlayerStatistics\",\"TeamStatistics\"])\n",
-    "    _, player_stats, _ = enforce_criteria_python(\n",
+    "    _, player_stats, team_stats = enforce_criteria_python(   # <-- capture team_stats\n",
     "        None, data[\"PlayerStatistics\"], data[\"TeamStatistics\"],\n",
     "        start_season=start_season, season_type=season_type,\n",
     "        minutes_total_minimum_per_season=minutes_minimum,\n",
     "        defer_minutes_gate=True,\n",
     "    )\n",
+    "\n",
+    "    # save the exact bases we used (once)\n",
+    "    if export_bases:\n",
+    "        export_base_csvs(\n",
+    "            player_stats=player_stats,\n",
+    "            team_stats=team_stats,\n",
+    "            outdir=bases_outdir,\n",
+    "            start_season=start_season,\n",
+    "            season_type=season_type,\n",
+    "        )\n",
+    "\n",
     "    return compute_player_game_pie(player_stats)\n",
+    "\n",
     "\n",
     "def build_per_data(\n",
     "    start_season: int = CFG_START_SEASON,\n",
@@ -2540,10 +2436,13 @@
     "if __name__ == \"__main__\":\n",
     "    print(\"=== NBA Player Rankings Analysis ===\")\n",
     "\n",
-    "    # Build player-game data with PIE\n",
+    "    # 1) Player-game + export used bases\n",
     "    print(\"\\n1. Building player-game data...\")\n",
     "    try:\n",
-    "        player_game_data = build_player_game_data()\n",
+    "        player_game_data = build_player_game_data(\n",
+    "            export_bases=True,                       # <-- NEW\n",
+    "            bases_outdir=Path(CFG.processed_dir)/\"base\"  # optional; defaults to processed/base\n",
+    "        )\n",
     "        print(f\"Success: {player_game_data.shape} player-game records\")\n",
     "    except Exception as e:\n",
     "        print(f\"Error building player-game data: {e}\")\n",
@@ -2653,7 +2552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "87c643ca",
    "metadata": {},
    "outputs": [
@@ -2784,7 +2683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1a6ae34e",
    "metadata": {},
    "outputs": [
@@ -3351,7 +3250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ffe640b9",
    "metadata": {},
    "outputs": [
@@ -4171,7 +4070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "17cadd95",
    "metadata": {},
    "outputs": [
@@ -4641,7 +4540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a85a7b74",
    "metadata": {},
    "outputs": [
@@ -5326,7 +5225,7 @@
     }
    ],
    "source": [
-    "# %%writefile src/heat_data_scientist_2025/run_pie_gs36_prediction_pipeline.py\n",
+    "%%writefile src/heat_data_scientist_2025/run_pie_gs36_prediction_pipeline.py\n",
     "#!/usr/bin/env python3\n",
     "\"\"\"\n",
     "Multi-Target ML Pipeline Runner\n",
