--- a/notebooks/5080_gpu/basic_models.ipynb
+++ b/notebooks/5080_gpu/basic_models.ipynb
@@ -30,22 +30,22 @@
      "text": [
       "\n",
       "=== ENV SNAPSHOT (selected) ===\n",
-      "JAX_PLATFORM_NAME=None\n",
+      "JAX_PLATFORM_NAME=''\n",
       "JAX_PLATFORMS=None\n",
       "CUDA_VISIBLE_DEVICES='0'\n",
       "XLA_FLAGS='--xla_gpu_cuda_data_dir=/usr/local/cuda'\n",
       "NVIDIA_VISIBLE_DEVICES='all'\n",
-      "NVIDIA_DRIVER_CAPABILITIES='compute,utility'\n",
+      "NVIDIA_DRIVER_CAPABILITIES='all'\n",
       "===============================\n",
       "\n",
       "=== NVIDIA-SMI ===\n",
-      "Thu Sep 11 23:06:14 2025       \n",
+      "Sat Sep 20 01:48:00 2025       \n",
       "GPU is visible to the container/process.\n",
       "==================\n",
       "\n",
       "=== PyTorch ===\n",
-      "torch.__version__=2.6.0+cu124\n",
-      "torch.version.cuda=12.4\n",
+      "torch.__version__=2.8.0+cu128\n",
+      "torch.version.cuda=12.8\n",
       "torch.cuda.is_available()=True\n",
       "torch.cuda.device_count()=1\n",
       "current device name: NVIDIA GeForce RTX 4090\n",
@@ -642,7 +642,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85be7398151044ec8af8b9e67a881b91",
+       "model_id": "a247fb8eeac043fa8ae0d3590a777937",
        "version_major": 2,
        "version_minor": 0
       },
@@ -676,6 +676,7 @@
      "output_type": "stream",
      "text": [
       "Sampling 2 chains for 1_000 tune and 1_000 draw iterations (2_000 + 2_000 draws total) took 2 seconds.\n",
+      "There was 1 divergence after tuning. Increase `target_accept` or reparameterize.\n",
       "We recommend running at least 4 chains for robust computation of convergence diagnostics\n"
      ]
     }
@@ -754,13 +755,13 @@
       "LinearRegression(\n",
       "  (linear): Linear(in_features=1, out_features=1, bias=True)\n",
       ")\n",
-      "<generator object Module.parameters at 0x7172158560a0>\n",
-      "OrderedDict([('linear.weight', tensor([[0.8189]])), ('linear.bias', tensor([-0.2805]))])\n",
-      "tensor([0.5384], grad_fn=<ViewBackward0>)\n",
-      "tensor([1.3572], grad_fn=<ViewBackward0>)\n",
-      "tensor([2.1761], grad_fn=<ViewBackward0>)\n",
-      "tensor([2.9949], grad_fn=<ViewBackward0>)\n",
-      "tensor([3.8138], grad_fn=<ViewBackward0>)\n"
+      "<generator object Module.parameters at 0x79ccd226aea0>\n",
+      "OrderedDict([('linear.weight', tensor([[-0.2519]])), ('linear.bias', tensor([-0.1983]))])\n",
+      "tensor([-0.4502], grad_fn=<ViewBackward0>)\n",
+      "tensor([-0.7022], grad_fn=<ViewBackward0>)\n",
+      "tensor([-0.9541], grad_fn=<ViewBackward0>)\n",
+      "tensor([-1.2061], grad_fn=<ViewBackward0>)\n",
+      "tensor([-1.4580], grad_fn=<ViewBackward0>)\n"
      ]
     }
    ],
@@ -829,17 +830,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: loss=0.6427\n",
-      "Epoch 50: loss=0.2706\n",
-      "Epoch 100: loss=0.2666\n",
-      "Epoch 150: loss=0.2666\n",
-      "Epoch 200: loss=0.2666\n",
-      "Epoch 250: loss=0.2675\n",
-      "Epoch 300: loss=0.2656\n",
-      "Epoch 350: loss=0.2698\n",
-      "Epoch 400: loss=0.2710\n",
-      "Epoch 450: loss=0.2681\n",
-      "Final w,b: [1.77777766] 0.7048330797041529\n"
+      "Epoch 0: loss=0.6412\n",
+      "Epoch 50: loss=0.2682\n",
+      "Epoch 100: loss=0.2647\n",
+      "Epoch 150: loss=0.2689\n",
+      "Epoch 200: loss=0.2672\n",
+      "Epoch 250: loss=0.2661\n",
+      "Epoch 300: loss=0.2637\n",
+      "Epoch 350: loss=0.2685\n",
+      "Epoch 400: loss=0.2666\n",
+      "Epoch 450: loss=0.2687\n",
+      "Final w,b: [1.77875113] 0.7380772696304022\n"
      ]
     }
    ],
@@ -946,13 +947,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Initializing NUTS using jitter+adapt_diag...\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -970,11 +964,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/app/.venv/lib/python3.10/site-packages/pytensor/link/c/cmodule.py:2968: UserWarning: PyTensor could not link to a BLAS installation. Operations that might benefit from BLAS will be severely degraded.\n",
-      "This usually happens when PyTensor is installed via pip. We recommend it be installed via conda/mamba/pixi instead.\n",
-      "Alternatively, you can use an experimental backend such as Numba or JAX that perform their own BLAS optimizations, by setting `pytensor.config.mode == 'NUMBA'` or passing `mode='NUMBA'` when compiling a PyTensor function.\n",
-      "For more options and details see https://pytensor.readthedocs.io/en/latest/troubleshooting.html#how-do-i-configure-test-my-blas-library\n",
-      "  warnings.warn(\n",
+      "Initializing NUTS using jitter+adapt_diag...\n",
       "WARNING (pytensor.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n",
       "Multiprocess sampling (2 chains in 2 jobs)\n",
       "NUTS: [w, b]\n",
@@ -985,7 +975,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a1c2f77cee84937b9c16ae3f9614a21",
+       "model_id": "4814d2b10dbc455aa7dd5a836757729a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1027,12 +1017,12 @@
      "output_type": "stream",
      "text": [
       "       mean     sd  hdi_2.5%  hdi_97.5%  mcse_mean  mcse_sd  ess_bulk  \\\n",
-      "w[0]  1.134  0.759    -0.295      2.662      0.014    0.013    3219.0   \n",
-      "b     0.284  0.734    -1.132      1.720      0.012    0.012    3932.0   \n",
+      "w[0]  1.131  0.782    -0.331      2.741      0.014    0.013    3200.0   \n",
+      "b     0.266  0.722    -1.102      1.729      0.013    0.012    3284.0   \n",
       "\n",
       "      ess_tail  r_hat  \n",
-      "w[0]    2214.0    1.0  \n",
-      "b       2560.0    1.0  \n"
+      "w[0]    2348.0    1.0  \n",
+      "b       2297.0    1.0  \n"
      ]
     },
     {
@@ -1045,7 +1035,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab609436d87d4d79bdb6bddbb6ed6c49",
+       "model_id": "4337426d04df40f292ecc0a3833ca43d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1073,11 +1063,11 @@
       "DEBUG: ppc['obs'] shape = (2, 2000, 5)\n",
       "\n",
       "=== POSTERIOR‑PREDICTIVE WIN PROBS ===\n",
-      "Rating 50 → P(win) ≈ 0.27\n",
-      "Rating 55 → P(win) ≈ 0.39\n",
-      "Rating 60 → P(win) ≈ 0.56\n",
-      "Rating 65 → P(win) ≈ 0.71\n",
-      "Rating 70 → P(win) ≈ 0.81\n"
+      "Rating 50 → P(win) ≈ 0.28\n",
+      "Rating 55 → P(win) ≈ 0.41\n",
+      "Rating 60 → P(win) ≈ 0.55\n",
+      "Rating 65 → P(win) ≈ 0.73\n",
+      "Rating 70 → P(win) ≈ 0.82\n"
      ]
     },
     {
@@ -1360,7 +1350,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best split: (1, 28, 0.20833333333333326, 0.2777777777777777, 0.0)\n"
+      "Best split: (1, np.int64(28), np.float64(0.20833333333333326), np.float64(0.2777777777777777), np.float64(0.0))\n"
      ]
     }
    ],
@@ -1662,7 +1652,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Log-posteriors: {'Curveball': -27.041563918557433, 'Fastball': -11.62369561051438}\n",
+      "Log-posteriors: {'Curveball': np.float64(-27.041563918557433), 'Fastball': np.float64(-11.62369561051438)}\n",
       "Predicted class for pitch [  90 2400]: Fastball\n"
      ]
     }
@@ -1985,9 +1975,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (UV Environment)",
+   "display_name": "Docker Dev CV Environment",
    "language": "python",
-   "name": "uv_docker_dev_template"
+   "name": "docker-dev-cv"
   },
   "language_info": {
    "codemirror_mode": {
